--- a/templates/users/login.jinja2
+++ b/templates/users/login.jinja2
@@ -17,7 +17,12 @@
                 {{ render_field(form.remember_me) }}
                 <div class="field">
                     <div class="control">
-                        <button type="submit" class="button is-primary">Login</button>
+                        <button type="submit" class="button is-primary">
+                            <span class="icon">
+                                <i class="fas fa-paper-plane"></i>
+                            </span>
+                            <span>Login</span>
+                        </button>
                     </div>
                     <p class="help">Don't have an account? <a href="{{ url_for('users.register') }}">Create one here</a></p>
                 </div>
