--- a/templates/users/register.jinja2
+++ b/templates/users/register.jinja2
@@ -17,7 +17,12 @@
                 {{ render_field(form.password, placeholder="Password") }}
                 <div class="field">
                     <div class="control">
-                        <button type="submit" class="button is-primary">Login</button>
+                        <button type="submit" class="button is-primary">
+                            <span class="icon">
+                                <i class="fas fa-paper-plane"></i>
+                            </span>
+                            <span>Register</span>
+                        </button>
                     </div>
                     <p class="help">Already have an account? <a href="{{ url_for('users.login') }}">Login here</a></p>
                 </div>
