Add account page
Added:
 - Delete account page
 - Update account details page
 - Update password page

--- a/templates/partials/flash.jinja2
+++ b/templates/partials/flash.jinja2
@@ -4,6 +4,8 @@
             {% set color = "primary" %}
             {% if category == "error" %}
                 {% set color = "danger" %}
+            {% elif category == "success" %}
+                {% set color = "success" %}
             {% elif category == "info" %}
                 {% set color = "info" %}
             {% elif category == "warning" %}
