--- a/templates/partials/nav.jinja2
+++ b/templates/partials/nav.jinja2
@@ -33,7 +33,7 @@
 
                 <div class="navbar-dropdown is-right">
                     {% if current_user.is_authenticated %}
-                        <a class="navbar-item">
+                        <a class="navbar-item" href="/account">
                             My Account
                         </a>
                         <a class="navbar-item" href="/links">
