--- a/templates/users/register.jinja2
+++ b/templates/users/register.jinja2
@@ -15,6 +15,7 @@
                 {{ render_field(form.username, placeholder="Username") }}
                 {{ render_field(form.email, placeholder="Email") }}
                 {{ render_field(form.password, placeholder="Password") }}
+                {{ render_field(form.password_confirm, placeholder="Password Confirm") }}
                 <div class="field">
                     <div class="control">
                         <button type="submit" class="button is-primary">
