--- a/templates/users/update_password.jinja2
+++ b/templates/users/update_password.jinja2
@@ -14,6 +14,7 @@
                 {{ form.csrf_token }}
                 {{ render_field(form.current_password, placeholder="Current Password") }}
                 {{ render_field(form.new_password, placeholder="New Password") }}
+                {{ render_field(form.password_confirm, placeholder="New Password Confirm") }}
                 <div class="field">
                     <div class="control">
                         <button type="submit" class="button is-primary">
