Add user accounts (#31)
* Add user login, logout and registration

* Add remember me

* Save short links to user account

* Fix database migrations

* Fix Drone build

* Fix Login Page Redirect

* Add 'my short links' page

* Update database and migrations

* Fix date formatting

    Fix download page datetime

* Add button icons

* Add account page

    Added:
     - Delete account page
     - Update account details page
     - Update password page

* Add email verification

* Add password confirmation fields

* Add password resetting

* Prevent email confirm and password reset token reuse

--- a/templates/download.jinja2
+++ b/templates/download.jinja2
@@ -1,18 +1,16 @@
 {% extends "base.jinja2" %}
 
 {% block title %}Download - VH7{% endblock %}
-{% block desc %}Download '{{ upload.original_filename|e }}' from VH7. Expires {{ upload.expires.strftime("%H:%m %d/%m/%Y") }}.{% endblock %}
+{% block desc %}Download '{{ upload.original_filename|e }}' from VH7. Expires {{ upload.expires.strftime("%H:%M %d/%m/%Y") }}.{% endblock %}
 
 {% block content %}
-    {% include "nav.jinja2" %}
-
     <section class="section">
         <div class="container">
             <h1 class="is-size-2">{{ upload.original_filename|e }}</h1>
             <div class="content">
                 <ul>
                     <li><b>SHA256:</b> <code>{{ upload.hash }}</code></li>
-                    <li><b>Expires:</b> {{ upload.expires.strftime("%H:%m %d/%m/%Y") }}</li>
+                    <li><b>Expires:</b> {{ upload.expires.strftime("%H:%M %d/%m/%Y") }}</li>
                     <li><b>File Type:</b> {{ upload.mimetype|e }}</li>
                 </ul>
             </div>
