Add changelog and changelog page

--- a/templates/partials/footer.jinja2
+++ b/templates/partials/footer.jinja2
@@ -5,7 +5,7 @@
             <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU GPL v3.0</a> and available on <a href="https://github.com/jake-walker/vh7">GitHub</a>.
         </p>
         <p class="is-size-7">
-            Version: {{ config.VERSION }} &#9679; <a href="/privacy">Privacy Policy</a>
+            Version: {{ config.VERSION }} &#8226; <a href="/privacy">Privacy Policy</a> • <a href="/changelog">Changelog</a>
         </p>
     </div>
 </footer>
