Use hCaptcha instead of reCAPTCHA

--- a/templates/users/register.jinja2
+++ b/templates/users/register.jinja2
@@ -16,7 +16,7 @@
                 {{ render_field(form.email, placeholder="Email") }}
                 {{ render_field(form.password, placeholder="Password") }}
                 {{ render_field(form.password_confirm, placeholder="Password Confirm") }}
-                {{ render_field(form.recaptcha) }}
+                {{ render_field(form.captcha) }}
                 <div class="field">
                     <div class="control">
                         <button type="submit" class="button is-primary">
