--- a/templates/users/login.jinja2
+++ b/templates/users/login.jinja2
@@ -15,7 +15,7 @@
                 {{ render_field(form.username, placeholder="Username") }}
                 {{ render_field(form.password, placeholder="Password") }}
                 {{ render_field(form.remember_me) }}
-                {{ render_field(form.recaptcha) }}
+                {{ render_field(form.captcha) }}
                 <div class="field">
                     <div class="control">
                         <button type="submit" class="button is-primary">
